@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  28 May 2010; Froxlor Release Team <release@froxlor.org>
+  froxlor-9999.ebuild:
+  tweak php 5.3 depends, depend on virtual/mysql instead of dev-db/mysql
+
 *froxlor-0.9.7 (17 May 2010)
 
   17 May 2010; Froxlor Release Team <release@froxlor.org>
